--- a/Tests/Fixtures/StencilContexts/Strings/custom-separator.yaml
+++ b/Tests/Fixtures/StencilContexts/Strings/custom-separator.yaml
@@ -29,6 +29,36 @@ tables:
       types:
       - "Int"
       - "String"
+    - key: "many.placeholders.base"
+      name: "many.placeholders.base"
+      translation: "%@ %d %f %5$d %04$f %6$d %007$@ %8$3.2f %11$1.2f %9$@ %10$d"
+      types:
+      - "String"
+      - "Int"
+      - "Float"
+      - "Float"
+      - "Int"
+      - "Int"
+      - "String"
+      - "Float"
+      - "String"
+      - "Int"
+      - "Float"
+    - key: "many.placeholders.zero"
+      name: "many.placeholders.zero"
+      translation: "%@ %d %0$@ %f %5$d %04$f %6$d %007$@ %8$3.2f %11$1.2f %9$@ %10$d"
+      types:
+      - "String"
+      - "Int"
+      - "Float"
+      - "Float"
+      - "Int"
+      - "Int"
+      - "String"
+      - "Float"
+      - "String"
+      - "Int"
+      - "Float"
     - key: "ObjectOwnership"
       name: "ObjectOwnership"
       translation: "These are %3$@'s %1$d %2$@."
