Change path string to components array. Drop parent directory

--- a/Tests/Fixtures/StencilContexts/Files/defaults.yaml
+++ b/Tests/Fixtures/StencilContexts/Files/defaults.yaml
@@ -1,9 +1,17 @@
 files:
-- name: "File"
-  ext: ""
-  path: "Files"
+- ext: "mp4"
+  mimeType: "video/mp4"
+  name: "A Video With Spaces"
+  path: "subdir"
+- ext: ""
   mimeType: "application/octet-stream"
-- name: "test"
-  ext: "txt"
-  path: "Files"
+  name: "File"
+  path: ""
+- ext: "svg"
+  mimeType: "image/svg+xml"
+  name: "graphic"
+  path: "subdir/subdir"
+- ext: "txt"
   mimeType: "text/plain"
+  name: "test"
+  path: ""
