--- a/Tests/Fixtures/StencilContexts/Files/defaults.yaml
+++ b/Tests/Fixtures/StencilContexts/Files/defaults.yaml
@@ -7,6 +7,10 @@ files:
   mimeType: "application/octet-stream"
   name: "File"
   path: ""
+- ext: "mp4"
+  mimeType: "video/mp4"
+  name: "another video"
+  path: "empty intermediate/subfolder"
 - ext: "svg"
   mimeType: "image/svg+xml"
   name: "graphic"
