--- a/Tests/Fixtures/StencilContexts/Files/defaults.yaml
+++ b/Tests/Fixtures/StencilContexts/Files/defaults.yaml
@@ -1,20 +1,30 @@
+dirs:
+- dirs:
+  - files:
+    - ext: "mp4"
+      mimeType: "video/mp4"
+      name: "another video"
+      path: "empty intermediate/subfolder"
+    name: "subfolder"
+  name: "empty intermediate"
+- dirs:
+  - files:
+    - ext: "svg"
+      mimeType: "image/svg+xml"
+      name: "graphic"
+      path: "subdir/subdir"
+    name: "subdir"
+  files:
+  - ext: "mp4"
+    mimeType: "video/mp4"
+    name: "A Video With Spaces"
+    path: "subdir"
+  name: "subdir"
 files:
-- ext: "mp4"
-  mimeType: "video/mp4"
-  name: "A Video With Spaces"
-  path: "subdir"
 - ext: ""
   mimeType: "application/octet-stream"
   name: "File"
   path: ""
-- ext: "mp4"
-  mimeType: "video/mp4"
-  name: "another video"
-  path: "empty intermediate/subfolder"
-- ext: "svg"
-  mimeType: "image/svg+xml"
-  name: "graphic"
-  path: "subdir/subdir"
 - ext: "txt"
   mimeType: "text/plain"
   name: "test"
