--- a/SwiftGen.xcodeproj/xcshareddata/xcschemes/swiftgen.xcscheme
+++ b/SwiftGen.xcodeproj/xcshareddata/xcschemes/swiftgen.xcscheme
@@ -154,7 +154,7 @@
             isEnabled = "NO">
          </CommandLineArgument>
          <CommandLineArgument
-            argument = "run files --templateName swift5 $(PROJECT_DIR)/Tests/Fixtures/Resources/Files"
+            argument = "run files --templateName structured-swift5 $(PROJECT_DIR)/Tests/Fixtures/Resources/Files"
             isEnabled = "NO">
          </CommandLineArgument>
          <CommandLineArgument
