Add parser options `relativeTo` and `compact`
- `relativeTo` allows explicitly specifying a directory parsed files should be in relation to
- `compact` eliminates nested common ancestors where the directory only contains another directory

--- a/Tests/Fixtures/StencilContexts/Files/defaults.yaml
+++ b/Tests/Fixtures/StencilContexts/Files/defaults.yaml
@@ -1,31 +1,33 @@
 directories:
 - directories:
-  - files:
+  - directories:
+    - files:
+      - ext: "mp4"
+        mimeType: "video/mp4"
+        name: "another video"
+        path: "Files/empty intermediate/subfolder"
+      name: "subfolder"
+    name: "empty intermediate"
+  - directories:
+    - files:
+      - ext: "svg"
+        mimeType: "image/svg+xml"
+        name: "graphic"
+        path: "Files/subdir/subdir"
+      name: "subdir"
+    files:
     - ext: "mp4"
       mimeType: "video/mp4"
-      name: "another video"
-      path: "empty intermediate/subfolder"
-    name: "subfolder"
-  name: "empty intermediate"
-- directories:
-  - files:
-    - ext: "svg"
-      mimeType: "image/svg+xml"
-      name: "graphic"
-      path: "subdir/subdir"
+      name: "A Video With Spaces"
+      path: "Files/subdir"
     name: "subdir"
   files:
-  - ext: "mp4"
-    mimeType: "video/mp4"
-    name: "A Video With Spaces"
-    path: "subdir"
-  name: "subdir"
-files:
-- ext: ""
-  mimeType: "application/octet-stream"
-  name: "File"
-  path: ""
-- ext: "txt"
-  mimeType: "text/plain"
-  name: "test"
-  path: ""
+  - ext: ""
+    mimeType: "application/octet-stream"
+    name: "File"
+    path: "Files"
+  - ext: "txt"
+    mimeType: "text/plain"
+    name: "test"
+    path: "Files"
+  name: "Files"
