--- a/Tests/Fixtures/StencilContexts/JSON/configuration.yaml
+++ b/Tests/Fixtures/StencilContexts/JSON/configuration.yaml
@@ -4,11 +4,13 @@ files:
       api-version: "2"
       country: null
       environment: "staging"
+      new-layout: true
       options:
         screen-order:
         - "1"
         - "2"
         - "3"
+      quick-search: false
     metadata:
       properties:
         api-version:
@@ -17,6 +19,8 @@ files:
           type: "Optional"
         environment:
           type: "String"
+        new-layout:
+          type: "Bool"
         options:
           properties:
             screen-order:
@@ -24,17 +28,21 @@ files:
                 type: "String"
               type: "Array"
           type: "Dictionary"
+        quick-search:
+          type: "Bool"
       type: "Dictionary"
   documents:
   - data:
       api-version: "2"
       country: null
       environment: "staging"
+      new-layout: true
       options:
         screen-order:
         - "1"
         - "2"
         - "3"
+      quick-search: false
     metadata:
       properties:
         api-version:
@@ -43,6 +51,8 @@ files:
           type: "Optional"
         environment:
           type: "String"
+        new-layout:
+          type: "Bool"
         options:
           properties:
             screen-order:
@@ -50,6 +60,8 @@ files:
                 type: "String"
               type: "Array"
           type: "Dictionary"
+        quick-search:
+          type: "Bool"
       type: "Dictionary"
   name: "configuration"
   path: "configuration.json"
