--- a/Tests/Fixtures/StencilContexts/Yaml/all.yaml
+++ b/Tests/Fixtures/StencilContexts/Yaml/all.yaml
@@ -39,6 +39,8 @@ files:
       - "John"
       - "Peter"
       - "Nick"
+      newLayout: true
+      quickSearch: false
       weight: 3.33e+1
     metadata:
       properties:
@@ -57,6 +59,10 @@ files:
           element:
             type: "String"
           type: "Array"
+        newLayout:
+          type: "Bool"
+        quickSearch:
+          type: "Bool"
         weight:
           type: "Double"
       type: "Dictionary"
