--- a/Tests/Fixtures/StencilContexts/JSON/configuration.yaml
+++ b/Tests/Fixtures/StencilContexts/JSON/configuration.yaml
@@ -3,23 +3,63 @@ files:
     data:
       api-version: "2"
       country: null
+      doors: 5
       environment: "staging"
+      flags:
+      - true
+      - false
+      - true
+      mixed:
+      - "one"
+      - 2
+      - true
+      mixed2:
+      - 1e-1
+      - 2
+      - true
       new-layout: true
+      one: 1
       options:
         screen-order:
         - "1"
         - "2"
         - "3"
+      primes:
+      - 2
+      - 3
+      - 5
+      - 7
       quick-search: false
+      zero: 0
     metadata:
       properties:
         api-version:
           type: "String"
         country:
           type: "Optional"
+        doors:
+          type: "Int"
         environment:
           type: "String"
+        flags:
+          element:
+            type: "Bool"
+          type: "Array"
+        mixed:
+          element:
+            items:
+            - type: "String"
+            - type: "Int"
+            - type: "Bool"
+            type: "Any"
+          type: "Array"
+        mixed2:
+          element:
+            type: "Double"
+          type: "Array"
         new-layout:
+          type: "Bool"
+        one:
           type: "Bool"
         options:
           properties:
@@ -28,30 +68,76 @@ files:
                 type: "String"
               type: "Array"
           type: "Dictionary"
+        primes:
+          element:
+            type: "Int"
+          type: "Array"
         quick-search:
+          type: "Bool"
+        zero:
           type: "Bool"
       type: "Dictionary"
   documents:
   - data:
       api-version: "2"
       country: null
+      doors: 5
       environment: "staging"
+      flags:
+      - true
+      - false
+      - true
+      mixed:
+      - "one"
+      - 2
+      - true
+      mixed2:
+      - 1e-1
+      - 2
+      - true
       new-layout: true
+      one: 1
       options:
         screen-order:
         - "1"
         - "2"
         - "3"
+      primes:
+      - 2
+      - 3
+      - 5
+      - 7
       quick-search: false
+      zero: 0
     metadata:
       properties:
         api-version:
           type: "String"
         country:
           type: "Optional"
+        doors:
+          type: "Int"
         environment:
           type: "String"
+        flags:
+          element:
+            type: "Bool"
+          type: "Array"
+        mixed:
+          element:
+            items:
+            - type: "String"
+            - type: "Int"
+            - type: "Bool"
+            type: "Any"
+          type: "Array"
+        mixed2:
+          element:
+            type: "Double"
+          type: "Array"
         new-layout:
+          type: "Bool"
+        one:
           type: "Bool"
         options:
           properties:
@@ -60,7 +146,13 @@ files:
                 type: "String"
               type: "Array"
           type: "Dictionary"
+        primes:
+          element:
+            type: "Int"
+          type: "Array"
         quick-search:
+          type: "Bool"
+        zero:
           type: "Bool"
       type: "Dictionary"
   name: "configuration"
