--- a/Tests/Fixtures/Resources/Plist/good/configuration.plist
+++ b/Tests/Fixtures/Resources/Plist/good/configuration.plist
@@ -4,16 +4,45 @@
 <dict>
 	<key>Environment</key>
 	<string>development</string>
-	<key>Options</key>
-	<dict>
-		<key>Animation Style</key>
-		<string>Party Mode</string>
-	</dict>
+	<key>Flags</key>
+	<array>
+		<true/>
+		<false/>
+		<true/>
+	</array>
+	<key>Mixed</key>
+	<array>
+		<string>One</string>
+		<integer>1</integer>
+		<true/>
+	</array>
+	<key>Mixed2</key>
+	<array>
+		<real>0.1</real>
+		<integer>1</integer>
+		<true/>
+	</array>
 	<key>Names</key>
 	<array>
 		<string>John</string>
 		<string>Peter</string>
 		<string>Nick</string>
 	</array>
+	<key>One</key>
+	<integer>1</integer>
+	<key>Options</key>
+	<dict>
+		<key>Animation Style</key>
+		<string>Party Mode</string>
+	</dict>
+	<key>Primes</key>
+	<array>
+		<integer>2</integer>
+		<integer>3</integer>
+		<integer>5</integer>
+		<integer>7</integer>
+	</array>
+	<key>Zero</key>
+	<integer>0</integer>
 </dict>
 </plist>
