Ensure we generate correct metadata for NSNumber types

--- a/Tests/Fixtures/StencilContexts/JSON/all.yaml
+++ b/Tests/Fixtures/StencilContexts/JSON/all.yaml
@@ -78,7 +78,7 @@ files:
         new-layout:
           type: "Bool"
         one:
-          type: "Bool"
+          type: "Int"
         options:
           properties:
             screen-order:
@@ -93,7 +93,7 @@ files:
         quick-search:
           type: "Bool"
         zero:
-          type: "Bool"
+          type: "Int"
       type: "Dictionary"
   documents:
   - data:
@@ -156,7 +156,7 @@ files:
         new-layout:
           type: "Bool"
         one:
-          type: "Bool"
+          type: "Int"
         options:
           properties:
             screen-order:
@@ -171,7 +171,7 @@ files:
         quick-search:
           type: "Bool"
         zero:
-          type: "Bool"
+          type: "Int"
       type: "Dictionary"
   name: "configuration"
   path: "configuration.json"
