--- a/Tests/Fixtures/StencilContexts/JSON/configuration.yaml
+++ b/Tests/Fixtures/StencilContexts/JSON/configuration.yaml
@@ -55,7 +55,11 @@ files:
           type: "Array"
         mixed2:
           element:
-            type: "Double"
+            items:
+            - type: "Double"
+            - type: "Int"
+            - type: "Bool"
+            type: "Any"
           type: "Array"
         new-layout:
           type: "Bool"
@@ -133,7 +137,11 @@ files:
           type: "Array"
         mixed2:
           element:
-            type: "Double"
+            items:
+            - type: "Double"
+            - type: "Int"
+            - type: "Bool"
+            type: "Any"
           type: "Array"
         new-layout:
           type: "Bool"
