--- a/.github/workflows/test-spm.yml
+++ b/.github/workflows/test-spm.yml
@@ -24,6 +24,14 @@ jobs:
         uses: ruby/setup-ruby@v1
         with:
           bundler-cache: true
+      - 
+        name: Cache SPM
+        uses: actions/cache@v2
+        with:
+          path: .build
+          key: ${{ runner.os }}-spm-${{ hashFiles('**/Package.resolved') }}
+          restore-keys: |
+            ${{ runner.os }}-spm-
       # TODO: This should run the tests once SPM supports testing an executable
       -
         name: Build
