--- a/Tests/Fixtures/StencilContexts/Files/mp4s.yaml
+++ b/Tests/Fixtures/StencilContexts/Files/mp4s.yaml
@@ -1,15 +1,17 @@
-directories:
+groups:
 - directories:
+  - directories:
+    - files:
+      - ext: "mp4"
+        mimeType: "video/mp4"
+        name: "another video"
+        path: "empty intermediate/subfolder"
+      name: "subfolder"
+    name: "empty intermediate"
   - files:
     - ext: "mp4"
       mimeType: "video/mp4"
-      name: "another video"
-      path: "empty intermediate/subfolder"
-    name: "subfolder"
-  name: "empty intermediate"
-- files:
-  - ext: "mp4"
-    mimeType: "video/mp4"
-    name: "A Video With Spaces"
-    path: "subdir"
-  name: "subdir"
+      name: "A Video With Spaces"
+      path: "subdir"
+    name: "subdir"
+  name: "Files"
