--- a/Sources/TestUtils/Fixtures/StencilContexts/Strings/plurals-same-table.yaml
+++ b/Sources/TestUtils/Fixtures/StencilContexts/Strings/plurals-same-table.yaml
@@ -10,7 +10,8 @@ tables:
         - "Int"
     - name: "bananas"
       strings:
-      - key: "bananas.owner"
+      - comment: "A comment with no space above it"
+        key: "bananas.owner"
         name: "owner"
         translation: "Those %d bananas belong to %@."
         types:
@@ -34,6 +35,13 @@ tables:
           types:
           - "Int"
       name: "feed"
+    - name: "key1"
+      strings:
+      - comment: "Same as \"key1\" = \"value1\"; but in the context of user not logged
+          in"
+        key: "key1.anonymous"
+        name: "anonymous"
+        translation: "value2"
     - children:
       - name: "placeholders"
         strings:
@@ -113,13 +121,25 @@ tables:
           name: "HEADER_TITLE"
           translation: "User Profile Settings"
       name: "settings"
+    - children:
+      - name: "/*happens*/"
+        strings:
+        - comment: "some comment"
+          key: "what./*happens*/.here"
+          name: "here"
+          translation: "hello world! /* still in string */"
+      name: "what"
     strings:
     - key: "alert__message"
       name: "alert__message"
       translation: "Some alert body there"
-    - key: "alert__title"
+    - comment: "Title for an alert"
+      key: "alert__title"
       name: "alert__title"
       translation: "Title of the alert"
+    - key: "key1"
+      name: "key1"
+      translation: "value1"
     - key: "ObjectOwnership"
       name: "ObjectOwnership"
       translation: "These are %3$@'s %1$d %2$@."
