--- a/.github/workflows/archive.yml
+++ b/.github/workflows/archive.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   install:
     name: Install
-    runs-on: macos-latest
+    runs-on: macos-11
     steps:
       - 
         name: Checkout
@@ -37,7 +37,7 @@ jobs:
 
   zip:
     name: Zip
-    runs-on: macos-latest
+    runs-on: macos-11
     steps:
       - 
         name: Checkout
