--- a/.github/workflows/compile-output.yml
+++ b/.github/workflows/compile-output.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   compile:
     name: Compile Output
-    runs-on: macos-latest
+    runs-on: macos-11
     steps:
       - 
         name: Checkout
