--- a/.github/workflows/test-spm.yml
+++ b/.github/workflows/test-spm.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   macos:
     name: Test SPM macOS
-    runs-on: macos-latest
+    runs-on: macos-11
     steps:
       - 
         name: Checkout
