--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,3 +5,6 @@ updates:
     directory: "/"
     schedule:
       interval: "daily"
+    target-branch: "develop"
+    commit-message:
+      prefix: "#trivial Dependabot "
