--- a/Sources/TestUtils/Fixtures/StencilContexts/Strings/custom-separator.yaml
+++ b/Sources/TestUtils/Fixtures/StencilContexts/Strings/custom-separator.yaml
@@ -81,7 +81,7 @@ tables:
       translation: "This is a %% character."
     - key: "private"
       name: "private"
-      translation: "Hello, my name is %@ and I'm %d"
+      translation: "Hello, my name is \"%@\" and I'm %d"
       types:
       - "String"
       - "Int"
