--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -1,4 +1,4 @@
-swiftlint_version: 0.47.1
+swiftlint_version: 0.48.0
 
 opt_in_rules:
  - accessibility_label_for_image
@@ -89,6 +89,7 @@ opt_in_rules:
  - vertical_parameter_alignment_on_call
  - vertical_whitespace_closing_braces
  - vertical_whitespace_opening_braces
+ - void_function_in_ternary
  - weak_delegate
  - xct_specific_matcher
  - yoda_condition
